# warlocks-gambit

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Readme.md  clippy.toml
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: scene.glb  scene_debug.glb  scene_mainmenu.glb
assets/decks/: oppo.deck  player.deck
docs/: primary-gamplay-propositions.md
licenses/: LICENSE-MIT
scripts/: pre-commit.git-hook  set_git_hooks.sh  wasm_build.html  wasm_build.sh
src/: animate.rs  audio.rs  camera.rs  card.rs  card_effect.rs  cheat.rs  debug_overlay.rs  deck.rs  detection.rs  game_flow.rs  game_ui.rs  gameover.rs  gltf_hook.rs  main.rs  numbers.rs  oppo_hand.rs  pile.rs  player_hand.rs  restart_menu.rs  scene.rs  state.rs  system_helper.rs  ui.rs  war.rs
src/ui/: common.rs  gameover.rs  main_menu.rs  mod.rs  pause_menu.rs  restart_menu.rs
