[package]
name = "warlocks-gambit"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic = ["bevy/dynamic"]
debug = ["bevy-inspector-egui", "bevy-debug-text-overlay/debug"]
default = ["dynamic", "debug"]

[dependencies]
anyhow = "1"
bevy-debug-text-overlay = { version = "1.0", default-features = false, features = ["builtin-font"] }
bevy-scene-hook = "1.2"
bevy_kira_audio = "0.8"
bevy-ui-navigation = "0.14"
bevy = { version = "0.6", default-features = false, features = [
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    "x11",
] }
bevy-ui-build-macros = "0.3.0"
bevy-inspector-egui = { version = "0.8", optional = true }
enum-map = "2"
bevy_mod_raycast = "0.3"
fastrand = "1.7"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
# According to some video I saw, -O3 is not significantly better than -O2
opt-level = 2
lto = "fat"
