[package]
name = "warlocks-gambit"
version = "1.7.0"
edition = "2021"
exclude = ["assets"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic = ["bevy/dynamic"]
debug = ["bevy-inspector-egui", "bevy-debug-text-overlay/debug"]
default = ["dynamic", "debug"]

[dependencies]
anyhow = "1"
bevy-debug-text-overlay = { version = "3.0", default-features = false, features = ["builtin-font"] }
bevy-scene-hook = "4.0"
bevy_kira_audio = "0.12"
bevy-ui-navigation = "0.21"
bevy = { version = "0.8", default-features = false, features = [
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    "x11",
] }
bevy-ui-build-macros = "0.4.0"
bevy-inspector-egui = { version = "0.12", optional = true }
enum-map = "2"
bevy_mod_raycast = "0.6"
fastrand = "1.8"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
# According to some video I saw, -O3 is not significantly better than -O2
opt-level = 3
lto = "fat"
